Added copyright info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer>
+  <aside>
+    <small>2014 &copy; Svetlana Nikitina</small>
+  </aside>
   <nav>
     <ul>
       <li><a href="#">Top</a></li>
