Wrapped the page content with 'main' element.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
 
       {% include header.html %}
 
-      {{ content }}
+      <main>
+        {{ content }}
+      </main>
     </div>
 
     {% include footer.html %}
