Added sticky footer and new layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <div id="wrapper">
+    <div id="wrapper" class="content">
 
       {% include header.html %}
 
