--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
 <footer>
-  <aside>
-    <small>2014 &copy; Svetlana Nikitina</small>
-  </aside>
-  <nav>
-    <ul>
-      <li><a href="#">Top</a></li>
-      {% include nav_items.html %}
-    </ul>
-  </nav>
+  <div class="content">
+    <aside>
+      <small>2014 &copy; Svetlana Nikitina</small>
+    </aside>
+    <nav>
+      <ul>
+        <li><a href="#">Top</a></li>
+        {% include nav_items.html %}
+      </ul>
+    </nav>
+  </div>
 </footer>
