Added styles for the layout and index page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     </aside>
     <nav>
       <ul>
-        <li><a href="#">Top</a></li>
+        <li><a href="#" title="Back to top">&uarr; Top</a></li>
         {% include nav_items.html %}
       </ul>
     </nav>
