--- a/_sass/_setup.scss
+++ b/_sass/_setup.scss
@@ -1,9 +1,17 @@
 $mainBgColor: #fff;
 $bodyBgColor: #f0f0f0;
 $columnBgColor: #ddd;
-$footerBgColor: #444;
+$footerBgColor: #202020;
+
+$textColor: #202020;
+
+$green: #1FAF95;
+$green2: #00BD9A;//#29AF95;
 
 $contentWidth: 960px;
 
 $fontSize: 1.2em;
 $fontFamily: "Lucida Grande", sans-serif;
+$lineHeight: 1.5em;
+
+$commonPadding: 1.5em;
