--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-	<h1><a href="/">Logo</a></h1>
+	<h1><a href="/">S&bull;Nikitina</a></h1>
   <nav>
     <ul>
       {% include nav_items.html %}
