--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -1,3 +1,7 @@
+$headerFontSize: 3em;
+$navFontSize: 1em;//.16em;
+
+
 #wrapper > header {
 
   @include legacy-pie-clearfix;
@@ -6,25 +10,44 @@
 
   h1 {
     float: left;
-    margin: 0;
+    font-family: "Montez", cursive;
+    font-size: $headerFontSize;
+    left: -.1em;
+    margin: 0 ($fontSize / $headerFontSize * $commonPadding);
+    position: relative;
   }
 
   nav {
 
     float: right;
+    font-size: $navFontSize;
+    font-weight: bold;
+    letter-spacing: .08em;
+    margin-right: ($fontSize / $navFontSize * 1em);
+    text-transform: uppercase;
 
     ul {
       @include legacy-pie-clearfix;
+      margin: ($headerFontSize - $navFontSize) / 2em * $lineHeight 0 0;
+      padding: 0;
     }
 
     li {
       display: block;
       float: left;
-      margin-left: 1em;
+      margin-left: ($fontSize / $navFontSize * 1em);
+    }
+
+    a, a:visited {
+      color: lighten($textColor, 20%);
     }
   }
 
   a {
     text-decoration: none;
+
+    &, &:visited {
+      color: $textColor;
+    }
   }
 }
