--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -86,12 +86,12 @@ article > header {
   h1 {
     font-size: 20px;
     font-weight: normal;
-    margin: 0 0 .3em;
+    margin: 0;
   }
 
   p {
     font-size: 15px;
-    margin: 0;
+    margin: .5em 0 0;
   }
 
   em {
