--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,88 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon.eot?-v1pk7s');
+  src: url('../fonts/icomoon.eot?#iefix-v1pk7s') format("embedded-opentype"), url('../fonts/icomoon.woff?-v1pk7s') format("woff"), url('../fonts/icomoon.ttf?-v1pk7s') format("truetype"), url('../fonts/icomoon.svg?-v1pk7s#icomoon') format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 12, ../_sass/_icomoon.scss */
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 26, ../_sass/_icomoon.scss */
+.icon-checkmark:before {
+  content: "\e600";
+}
+
+/* line 29, ../_sass/_icomoon.scss */
+.icon-arrow-up:before {
+  content: "\e601";
+}
+
+/* line 32, ../_sass/_icomoon.scss */
+.icon-stop:before {
+  content: "\e602";
+}
+
+/* line 35, ../_sass/_icomoon.scss */
+.icon-linkedin:before {
+  content: "\e603";
+}
+
+/* line 38, ../_sass/_icomoon.scss */
+.icon-skype:before {
+  content: "\e604";
+}
+
+/* line 41, ../_sass/_icomoon.scss */
+.icon-github:before {
+  content: "\e605";
+}
+
+/* line 44, ../_sass/_icomoon.scss */
+.icon-mail:before {
+  content: "\e606";
+}
+
+/* line 47, ../_sass/_icomoon.scss */
+.icon-instagram:before {
+  content: "\e607";
+}
+
+/* line 50, ../_sass/_icomoon.scss */
+.icon-phone:before {
+  content: "\e608";
+}
+
+/* line 53, ../_sass/_icomoon.scss */
+.icon-phone-hang-up:before {
+  content: "\e609";
+}
+
+/* line 56, ../_sass/_icomoon.scss */
+.icon-mobile:before {
+  content: "\e60a";
+}
+
+/* line 59, ../_sass/_icomoon.scss */
+.icon-mobile2:before {
+  content: "\e60b";
+}
+
 /* line 4, ../_sass/layout/_header.scss */
 #wrapper > header {
   *zoom: 1;
@@ -247,12 +329,19 @@ main > aside > div {
   margin-right: 18px;
 }
 /* line 72, ../_sass/layout/_layout.scss */
-main > aside h3 {
+main > aside > h3 {
   margin-left: 15.51724px;
   margin-right: 15.51724px;
 }
 
 /* line 78, ../_sass/layout/_layout.scss */
+#resume-aside {
+  position: fixed;
+  top: 102px;
+  width: 284px;
+}
+
+/* line 84, ../_sass/layout/_layout.scss */
 article > header {
   background-color: #00bd9a;
   color: rgba(255, 255, 255, 0.95);
@@ -260,18 +349,18 @@ article > header {
   margin-bottom: 18px;
   padding: 18px;
 }
-/* line 86, ../_sass/layout/_layout.scss */
+/* line 92, ../_sass/layout/_layout.scss */
 article > header h1 {
   font-size: 20px;
   font-weight: normal;
   margin: 0;
 }
-/* line 92, ../_sass/layout/_layout.scss */
+/* line 98, ../_sass/layout/_layout.scss */
 article > header p {
   font-size: 15px;
   margin: .5em 0 0;
 }
-/* line 97, ../_sass/layout/_layout.scss */
+/* line 103, ../_sass/layout/_layout.scss */
 article > header em {
   font-size: 1.08em;
   color: white;
@@ -279,38 +368,43 @@ article > header em {
   letter-spacing: .03em;
 }
 
-/* line 9, ../_sass/main.scss */
+/* line 10, ../_sass/main.scss */
 body {
   font-family: "Lucida Grande", sans-serif;
   font-size: 62.5%;
 }
 
-/* line 14, ../_sass/main.scss */
+/* line 15, ../_sass/main.scss */
 #wrapper, body > footer {
   font-size: 1.2em;
 }
 
-/* line 18, ../_sass/main.scss */
+/* line 19, ../_sass/main.scss */
 h1, h2, h3, h4, h5, h6, p, div, li {
   line-height: 1.5em;
 }
 
-/* line 22, ../_sass/main.scss */
+/* line 23, ../_sass/main.scss */
 a, a:visited {
-  color: #00BD9A;
+  color: #00bd9a;
+  transition: all 0.2s linear 0s;
+}
+/* line 27, ../_sass/main.scss */
+a:not(.button):hover, a:visited:not(.button):hover {
+  color: #008a70;
 }
 
-/* line 26, ../_sass/main.scss */
+/* line 32, ../_sass/main.scss */
 article li {
   margin: .4em 0 0;
 }
 
-/* line 30, ../_sass/main.scss */
+/* line 36, ../_sass/main.scss */
 .bigger {
   font-size: 14px;
 }
 
-/* line 34, ../_sass/main.scss */
+/* line 40, ../_sass/main.scss */
 h2 {
   color: #00bd9a;
   font-family: "Voces";
@@ -319,39 +413,76 @@ h2 {
   letter-spacing: .03em;
 }
 
-/* line 42, ../_sass/main.scss */
+/* line 48, ../_sass/main.scss */
 article h3 {
   font-family: "Voces";
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: .5em;
 }
 
-/* line 48, ../_sass/main.scss */
+/* line 55, ../_sass/main.scss */
 h4 {
-  color: #00bd9a;
   font-size: 14px;
   margin: 0 0 .5em;
 }
 
+/* line 63, ../_sass/main.scss */
+.resume-item-data {
+  color: #777;
+  margin-bottom: .75em;
+}
+/* line 67, ../_sass/main.scss */
+.resume-item-data strong {
+  color: #00bd9a;
+}
+/* line 71, ../_sass/main.scss */
+.resume-item-data em {
+  border-left: 1px solid #bbb;
+  font-style: normal;
+  margin-left: .5em;
+  padding-left: .75em;
+}
+/* line 78, ../_sass/main.scss */
+.resume-item-data span {
+  border-left: 1px solid #bbb;
+  font-style: normal;
+  margin-left: .5em;
+  padding-left: .75em;
+}
+
+/* line 88, ../_sass/main.scss */
+#resume section {
+  margin-bottom: 2em;
+}
+/* line 92, ../_sass/main.scss */
+#resume section > ul > li {
+  margin-bottom: 1.5em;
+}
+/* line 96, ../_sass/main.scss */
+#resume section ul ul {
+  list-style-type: disc;
+  padding-left: 2em;
+}
+
 /* transition: all 0.2s linear 0s; */
-/* line 55, ../_sass/main.scss */
+/* line 103, ../_sass/main.scss */
 #recent-projects {
   text-align: center;
 }
-/* line 58, ../_sass/main.scss */
+/* line 106, ../_sass/main.scss */
 #recent-projects ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-/* line 64, ../_sass/main.scss */
+/* line 112, ../_sass/main.scss */
 #recent-projects li {
   display: block;
   margin: 0 0 18px;
   padding: 0;
   /* just for testing */
 }
-/* line 69, ../_sass/main.scss */
+/* line 117, ../_sass/main.scss */
 #recent-projects li a {
   display: block;
   height: 170px;
@@ -359,7 +490,7 @@ h4 {
   position: relative;
   width: 284px;
 }
-/* line 79, ../_sass/main.scss */
+/* line 127, ../_sass/main.scss */
 #recent-projects li a:after {
   border: 4px solid rgba(0, 0, 0, 0.4);
   content: "";
@@ -370,7 +501,7 @@ h4 {
   top: 0;
   width: 276px;
 }
-/* line 90, ../_sass/main.scss */
+/* line 138, ../_sass/main.scss */
 #recent-projects li img {
   -webkit-transform: scale(0.5, 0.5);
   -moz-transform: scale(0.5, 0.5);
@@ -378,31 +509,65 @@ h4 {
   -o-transform: scale(0.5, 0.5);
   transform: scale(0.5, 0.5);
 }
-/* line 95, ../_sass/main.scss */
+/* line 143, ../_sass/main.scss */
 #recent-projects li:first-child img {
   position: relative;
   top: -261px;
   left: -360px;
 }
-/* line 102, ../_sass/main.scss */
+/* line 150, ../_sass/main.scss */
 #recent-projects li:nth-child(2) img {
   position: relative;
   left: -455px;
   top: -260px;
 }
-/* line 110, ../_sass/main.scss */
+/* line 158, ../_sass/main.scss */
 #recent-projects li:nth-child(3) img {
   position: relative;
   left: -280px;
   top: -186px;
 }
-/* line 119, ../_sass/main.scss */
+/* line 167, ../_sass/main.scss */
 #recent-projects .button {
   padding-left: 4em;
   padding-right: 4em;
 }
 
-/* line 127, ../_sass/main.scss */
+/* line 173, ../_sass/main.scss */
+#qualifications {
+  font-size: 14px;
+}
+/* line 176, ../_sass/main.scss */
+#qualifications ul {
+  padding-left: 1.7em;
+}
+
+/* line 186, ../_sass/main.scss */
+.contact-list [class^="icon-"]:before, .contact-list [class*=" icon-"]:before {
+  font-size: 18px;
+  margin-right: .6em;
+  vertical-align: middle;
+}
+/* line 194, ../_sass/main.scss */
+.contact-list li {
+  line-height: 2em;
+}
+
+/* line 199, ../_sass/main.scss */
+aside .contact-list {
+  font-size: 13px;
+}
+/* line 202, ../_sass/main.scss */
+aside .contact-list li {
+  line-height: 2em;
+}
+
+/* line 207, ../_sass/main.scss */
+#qualifications .contact-list {
+  padding-left: .4em;
+}
+
+/* line 211, ../_sass/main.scss */
 .button {
   background-color: #00bd9a;
   -webkit-border-radius: 2px;
@@ -417,11 +582,11 @@ h4 {
   text-decoration: none;
   transition: all 0.2s linear 0s;
 }
-/* line 137, ../_sass/main.scss */
+/* line 221, ../_sass/main.scss */
 .button, .button:visited {
   color: white;
 }
-/* line 141, ../_sass/main.scss */
+/* line 225, ../_sass/main.scss */
 .button:hover {
   background-color: #008a70;
 }
